loan module update: loan officer review